# presto

./: .gitmodules  pom.xml
.github/workflows/: arrow-flight-tests.yml  prestocpp-linux-adapters-build.yml  prestocpp-linux-build-and-unit-test.yml  prestocpp-linux-build.yml
presto-flight-server/: pom.xml
presto-flight-shim/: pom.xml
presto-main/etc/: config.properties
presto-main/etc/catalog/: hive.properties
presto-main/etc/function-namespace/: native.properties
presto-main/etc/plan-checker-providers/: native.properties
presto-main/etc/session-property-providers/: native-worker.properties
presto-main/etc/type-managers/: native.properties
presto-native-execution/: pom.xml
presto-native-execution/presto_cpp/main/: CMakeLists.txt  PrestoServer.cpp
presto-native-execution/presto_cpp/main/connectors/: IcebergPrestoToVeloxConnector.cpp  Registration.cpp
presto-native-execution/presto_cpp/main/functions/: FunctionMetadata.cpp
presto-native-execution/presto_cpp/main/tvf/: CMakeLists.txt
presto-native-execution/presto_cpp/main/tvf/functions/testing/: CMakeLists.txt  TestingTableFunctions.cpp  TestingTableFunctionsPlugin.cpp
presto-native-execution/presto_cpp/presto_protocol/: java-to-struct-json.py
presto-native-sidecar-plugin/: pom.xml
presto-native-tests/: pom.xml
presto-native-tests/presto_cpp/tests/: CMakeLists.txt
presto-native-tvf/: pom.xml
presto-sql-helpers/presto-native-sql-invoked-functions-plugin/: pom.xml
presto-sql-helpers/presto-sql-invoked-functions-plugin/: pom.xml
presto-tests/: pom.xml
(+230 files in other folders)
